test/files/neg/t9138.check
t9138.scala:9: error: class D needs to be abstract. Missing implementation for:
  def f(t: B)(s: String): B // inherited from class C
(Note that String does not match Int)
class D extends C[B] {
      ^
t9138.scala:19: error: object creation impossible. Missing implementation for:
  def foo(a: String)(b: Int): Nothing // inherited from trait Base
object Derived extends Base[String] {
       ^
t9138.scala:29: error: class DDD needs to be abstract. Missing implementation for:
  def f(t: B,s: String): B // inherited from class CCC
(Note that T does not match Int)
class DDD extends CCC[B] {
      ^
three errors found
